cloud/w10/day-a/policies/gatekeeper/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredownerlabel
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredOwnerLabel
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredownerlabel

        violation[{"msg": msg}] {
          required := input.parameters.labels[_]
          labels := object.get(input.review.object.metadata, "labels", {})
          not labels[required]
          msg := sprintf("missing required label: %s", [required])
        }
